# quickjs-function-runner

./: Cargo.toml  README.md
src/: main.rs  script.js
