[package]
name = "quickjs_executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirofa_utils = "0.5"
quickjs_runtime = "0.8"
log = "0.4"
simple_logger = "2.3.0"
tokio = { version = "1", features = ["full"] }